crates/weaver-e2e/tests/snapshots/rust_trait_impl.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 7:8 --detail structure",
  "status": 1,
  "stdout": "{\n  \"refusal\": {\n    \"message\": \"observe get-card: no symbol found at 7:8\",\n    \"reason\": \"no_symbol_at_position\",\n    \"requested_detail\": \"structure\"\n  },\n  \"status\": \"refusal\"\n}",
  "stderr": ""
}
