crates/weaver-e2e/tests/snapshots/rust_use_block.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 1:1 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"interstitial\": {\n      \"imports\": {\n        \"groups\": [\n          [\n            \"std::collections::HashMap\",\n            \"std::fmt::Debug\"\n          ]\n        ],\n        \"normalized\": [\n          \"std::collections::HashMap\",\n          \"std::fmt::Debug\"\n        ],\n        \"raw\": \"use std::collections::HashMap;\\nuse std::fmt::Debug;\",\n        \"source\": \"tree_sitter\"\n      }\n    },\n    \"metrics\": {\n      \"cyclomatic\": 1,\n      \"lines\": 2\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"structure\": {\n      \"branches\": [],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"module\",\n        \"language\": \"rust\",\n        \"name\": \"use_block\",\n        \"range\": {\n          \"end\": {\n            \"column\": 20,\n            \"line\": 1\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 0\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
